#include "astrocomm/server/services/communication_service.h"
#include "astrocomm/server/core/service_registry.h"
#include "astrocomm/server/core/server_interface.h"
#include <spdlog/spdlog.h>
#include <algorithm>
#include <random>
#include <iomanip>
#include <sstream>

namespace astrocomm {
namespace server {
namespace services {

/**
 * @brief Concrete implementation of the Communication Service
 */
class CommunicationServiceImpl : public core::BaseService, public ICommunicationService {
public:
    explicit CommunicationServiceImpl(const std::string& name = "CommunicationService")
        : core::BaseService(name, "1.0.0") {
        description_ = "Communication routing service for AstroComm server";
    }

    // IService implementation
    bool initialize() override {
        setState(core::ServiceState::INITIALIZING);
        
        spdlog::info("Initializing Communication Service...");
        
        // Initialize internal data structures
        messages_.clear();
        subscriptions_.clear();
        deliveryReceipts_.clear();
        
        // Initialize statistics
        resetStatistics();
        
        setState(core::ServiceState::INITIALIZED);
        setHealthy(true);
        setHealthStatus("Communication service initialized successfully");
        
        spdlog::info("Communication Service initialized");
        return true;
    }

    bool start() override {
        if (getState() != core::ServiceState::INITIALIZED) {
            spdlog::error("Communication Service not initialized");
            return false;
        }

        setState(core::ServiceState::STARTING);
        spdlog::info("Starting Communication Service...");

        // Start message processing
        running_ = true;
        messageProcessingThread_ = std::thread(&CommunicationServiceImpl::messageProcessingLoop, this);

        setState(core::ServiceState::RUNNING);
        spdlog::info("Communication Service started");
        return true;
    }

    bool stop() override {
        if (getState() != core::ServiceState::RUNNING) {
            return true;
        }

        setState(core::ServiceState::STOPPING);
        spdlog::info("Stopping Communication Service...");

        // Stop message processing
        running_ = false;
        if (messageProcessingThread_.joinable()) {
            messageProcessingThread_.join();
        }

        setState(core::ServiceState::STOPPED);
        spdlog::info("Communication Service stopped");
        return true;
    }

    bool restart() {
        return stop() && start();
    }

    // ICommunicationService implementation
    bool sendMessage(const core::Message& message) override {
        std::lock_guard<std::mutex> lock(messagesMutex_);

        std::string messageId = generateMessageId();

        // Store the message in our internal format
        Message internalMessage;
        internalMessage.id = messageId;
        internalMessage.senderId = message.senderId;
        internalMessage.recipientId = message.recipientId;
        internalMessage.content = message.payload;
        internalMessage.messageType = message.topic;
        internalMessage.priority = MessagePriority::NORMAL;
        internalMessage.status = MessageStatus::PENDING;
        internalMessage.timestamp = message.timestamp;

        messages_[messageId] = internalMessage;

        // Update statistics
        statistics_.totalSent++;

        spdlog::debug("Message queued: {} from {} to {}", messageId, message.senderId, message.recipientId);
        return true;
    }

    bool broadcastMessage(const core::Message& message,
                        const std::vector<core::CommunicationProtocol>& protocols = {}) override {
        std::lock_guard<std::mutex> lock(messagesMutex_);

        // For now, just send to all connected clients
        // In a real implementation, this would use the protocols parameter
        bool success = sendMessage(message);

        statistics_.totalBroadcast++;
        return success;
    }

    bool subscribeToTopic(const std::string& clientId, const std::string& topic,
                         core::CommunicationProtocol protocol) {
        std::lock_guard<std::mutex> lock(subscriptionsMutex_);
        
        TopicSubscription subscription;
        subscription.clientId = clientId;
        subscription.topic = topic;
        subscription.protocol = protocol;
        subscription.subscribedAt = std::chrono::system_clock::now();
        
        subscriptions_[clientId + ":" + topic] = subscription;
        
        spdlog::info("Client {} subscribed to topic {} via protocol {}", 
                    clientId, topic, static_cast<int>(protocol));
        return true;
    }

    bool unsubscribeFromTopic(const std::string& clientId, const std::string& topic) {
        std::lock_guard<std::mutex> lock(subscriptionsMutex_);
        
        auto key = clientId + ":" + topic;
        auto it = subscriptions_.find(key);
        if (it != subscriptions_.end()) {
            subscriptions_.erase(it);
            spdlog::info("Client {} unsubscribed from topic {}", clientId, topic);
            return true;
        }
        
        return false;
    }

    std::vector<core::Message> getMessages(const std::string& recipientId,
                                   MessageStatus status) const {
        std::lock_guard<std::mutex> lock(messagesMutex_);

        std::vector<core::Message> result;
        for (const auto& pair : messages_) {
            const auto& message = pair.second;
            if (message.recipientId == recipientId &&
                (status == MessageStatus::PENDING || message.status == status)) {
                // Convert internal Message to core::Message
                core::Message coreMsg;
                coreMsg.senderId = message.senderId;
                coreMsg.recipientId = message.recipientId;
                coreMsg.payload = message.content;
                coreMsg.topic = message.messageType;
                coreMsg.sourceProtocol = core::CommunicationProtocol::HTTP;
                coreMsg.timestamp = message.timestamp;
                result.push_back(coreMsg);
            }
        }
        
        return result;
    }

    bool markMessageAsRead(const std::string& messageId, const std::string& recipientId) {
        std::lock_guard<std::mutex> lock(messagesMutex_);
        
        auto it = messages_.find(messageId);
        if (it != messages_.end() && it->second.recipientId == recipientId) {
            it->second.status = MessageStatus::DELIVERED;
            it->second.readAt = std::chrono::system_clock::now();
            
            statistics_.totalDelivered++;
            return true;
        }
        
        return false;
    }

    std::vector<DeliveryReceipt> getDeliveryReceipts(const std::string& messageId) const override {
        std::lock_guard<std::mutex> lock(receiptsMutex_);
        
        std::vector<DeliveryReceipt> result;
        for (const auto& pair : deliveryReceipts_) {
            if (messageId.empty() || pair.second.messageId == messageId) {
                result.push_back(pair.second);
            }
        }
        
        return result;
    }

    DeliveryStatus getMessageDeliveryStatus(const std::string& messageId) const override {
        std::lock_guard<std::mutex> lock(messagesMutex_);
        
        auto it = messages_.find(messageId);
        if (it != messages_.end()) {
            switch (it->second.status) {
                case MessageStatus::PENDING: return DeliveryStatus::PENDING;
                case MessageStatus::SENT: return DeliveryStatus::SENT;
                case MessageStatus::DELIVERED: return DeliveryStatus::DELIVERED;
                case MessageStatus::FAILED: return DeliveryStatus::FAILED;
                default: return DeliveryStatus::UNKNOWN;
            }
        }
        
        return DeliveryStatus::UNKNOWN;
    }

    bool requestDeliveryReceipt(const std::string& messageId, bool enabled) override {
        std::lock_guard<std::mutex> lock(messagesMutex_);
        
        auto it = messages_.find(messageId);
        if (it != messages_.end()) {
            // Implementation would set delivery receipt flag
            return true;
        }
        
        return false;
    }

    MessageStatistics getMessageStatistics() const override {
        return statistics_;
    }

    // Additional required method implementations
    bool sendMessageToProtocol(const core::Message& message,
                             core::CommunicationProtocol protocol) override {
        // Simple implementation - just call sendMessage
        return sendMessage(message);
    }

    bool sendMessageToClient(const core::Message& message,
                           const std::string& clientId,
                           core::CommunicationProtocol protocol) override {
        // Simple implementation - just call sendMessage
        return sendMessage(message);
    }

    std::string queueMessage(const core::Message& message,
                           MessagePriority priority = MessagePriority::NORMAL) override {
        // Simple implementation - just send immediately
        sendMessage(message);
        return generateMessageId();
    }

    bool cancelQueuedMessage(const std::string& messageId) override {
        std::lock_guard<std::mutex> lock(messagesMutex_);
        auto it = messages_.find(messageId);
        if (it != messages_.end()) {
            messages_.erase(it);
            return true;
        }
        return false;
    }

    std::vector<core::Message> getPendingMessages(const std::string& clientId = "") const override {
        return getMessages(clientId, MessageStatus::PENDING);
    }

    size_t getQueueSize(core::CommunicationProtocol protocol = static_cast<core::CommunicationProtocol>(-1)) const override {
        std::lock_guard<std::mutex> lock(messagesMutex_);
        return messages_.size();
    }

    // Routing methods
    bool addRoute(const std::string& routeId, const MessageRoute& route) {
        std::lock_guard<std::mutex> lock(routesMutex_);
        routes_[routeId] = route;
        return true;
    }

    bool removeRoute(const std::string& routeId) {
        std::lock_guard<std::mutex> lock(routesMutex_);
        return routes_.erase(routeId) > 0;
    }

    std::vector<MessageRoute> getRoutes() const {
        std::lock_guard<std::mutex> lock(routesMutex_);
        std::vector<MessageRoute> result;
        for (const auto& pair : routes_) {
            result.push_back(pair.second);
        }
        return result;
    }

    bool routeMessage(const core::Message& message) {
        // Simple implementation - just send the message
        return sendMessage(message);
    }

    // Subscription methods
    std::vector<SubscriptionInfo> getSubscriptions(const std::string& clientId = "") const {
        std::lock_guard<std::mutex> lock(subscriptionsMutex_);
        std::vector<SubscriptionInfo> result;
        for (const auto& pair : subscriptions_) {
            if (clientId.empty() || pair.second.clientId == clientId) {
                SubscriptionInfo info;
                info.subscriptionId = pair.first;
                info.clientId = pair.second.clientId;
                info.topic = pair.second.topic;
                info.protocol = pair.second.protocol;
                info.filters = pair.second.options;
                info.isActive = true;
                info.createdAt = pair.second.subscribedAt;
                info.lastActivity = std::chrono::system_clock::now();
                info.messagesReceived = 0;
                result.push_back(info);
            }
        }
        return result;
    }

    std::vector<std::string> getTopicSubscribers(const std::string& topic) const {
        std::lock_guard<std::mutex> lock(subscriptionsMutex_);
        std::vector<std::string> result;
        for (const auto& pair : subscriptions_) {
            if (pair.second.topic == topic) {
                result.push_back(pair.second.clientId);
            }
        }
        return result;
    }

    bool publishToTopic(const std::string& topic, const core::Message& message) {
        // Simple implementation - just send the message
        return sendMessage(message);
    }

    // Protocol management methods
    bool enableProtocol(core::CommunicationProtocol protocol) {
        return true;
    }

    bool disableProtocol(core::CommunicationProtocol protocol) {
        return true;
    }

    bool isProtocolEnabled(core::CommunicationProtocol protocol) const {
        return true;
    }

    std::vector<core::CommunicationProtocol> getEnabledProtocols() const {
        return {core::CommunicationProtocol::HTTP, core::CommunicationProtocol::WEBSOCKET, core::CommunicationProtocol::GRPC};
    }

    // Client management methods
    bool registerClient(const std::string& clientId, core::CommunicationProtocol protocol,
                       const std::unordered_map<std::string, std::string>& metadata = {}) {
        return true;
    }

    bool unregisterClient(const std::string& clientId) {
        return true;
    }

    std::vector<std::string> getRegisteredClients(core::CommunicationProtocol protocol = static_cast<core::CommunicationProtocol>(-1)) const {
        return {};
    }

    bool isClientRegistered(const std::string& clientId) const {
        return true;
    }

    // Routing rule methods
    bool addRoutingRule(const RoutingRule& rule) override {
        return true;
    }

    bool updateRoutingRule(const RoutingRule& rule) override {
        return true;
    }

    bool removeRoutingRule(const std::string& ruleId) override {
        return true;
    }

    RoutingRule getRoutingRule(const std::string& ruleId) const override {
        RoutingRule rule;
        rule.ruleId = ruleId;
        return rule;
    }

    std::vector<RoutingRule> getAllRoutingRules() const override {
        return {};
    }

    bool enableRoutingRule(const std::string& ruleId, bool enabled) override {
        return true;
    }

    // Protocol bridging methods
    bool enableProtocolBridge(core::CommunicationProtocol sourceProtocol,
                            core::CommunicationProtocol targetProtocol) override {
        return true;
    }

    bool disableProtocolBridge(core::CommunicationProtocol sourceProtocol,
                             core::CommunicationProtocol targetProtocol) override {
        return true;
    }

    std::vector<std::pair<core::CommunicationProtocol, core::CommunicationProtocol>>
            getActiveBridges() const override {
        return {};
    }

    // Subscription management methods
    std::string subscribe(const std::string& clientId, const std::string& topic,
                        core::CommunicationProtocol protocol,
                        const std::unordered_map<std::string, std::string>& filters = {}) override {
        return generateMessageId();
    }

    bool unsubscribe(const std::string& subscriptionId) override {
        return true;
    }

    bool unsubscribeClient(const std::string& clientId) override {
        return true;
    }

    std::vector<SubscriptionInfo> getClientSubscriptions(const std::string& clientId) const override {
        return {};
    }

    std::vector<SubscriptionInfo> getTopicSubscriptions(const std::string& topic) const override {
        return {};
    }

    std::vector<SubscriptionInfo> getAllSubscriptions() const override {
        return {};
    }

    // Message filtering and transformation methods
    bool addMessageFilter(const std::string& filterId,
                        const std::function<bool(const core::Message&)>& filter) override {
        return true;
    }

    bool removeMessageFilter(const std::string& filterId) override {
        return true;
    }

    bool addMessageTransformer(const std::string& transformerId,
                             const std::function<core::Message(const core::Message&)>& transformer) override {
        return true;
    }

    bool removeMessageTransformer(const std::string& transformerId) override {
        return true;
    }



    // Performance monitoring methods
    std::chrono::milliseconds getAverageLatency(core::CommunicationProtocol protocol) const override {
        return std::chrono::milliseconds(100);
    }

    size_t getThroughput(core::CommunicationProtocol protocol) const override {
        return 1000;
    }

    double getErrorRate(core::CommunicationProtocol protocol) const override {
        return 0.01;
    }

    // Connection management methods
    std::vector<core::ConnectionInfo> getActiveConnections() const override {
        return {};
    }

    std::vector<core::ConnectionInfo> getProtocolConnections(core::CommunicationProtocol protocol) const override {
        return {};
    }

    bool disconnectClient(const std::string& clientId, core::CommunicationProtocol protocol) override {
        return true;
    }

    size_t getConnectionCount(core::CommunicationProtocol protocol = static_cast<core::CommunicationProtocol>(-1)) const override {
        return 0;
    }

    // Message persistence methods
    bool enableMessagePersistence(bool enabled) override {
        return true;
    }

    bool isMessagePersistenceEnabled() const override {
        return false;
    }

    std::vector<core::Message> getPersistedMessages(const std::string& topic = "",
                                                   size_t limit = 100) const override {
        return {};
    }

    bool clearPersistedMessages(const std::string& topic = "") override {
        return true;
    }

    // Rate limiting methods
    bool setRateLimit(const std::string& clientId, size_t messagesPerSecond) override {
        return true;
    }

    bool removeRateLimit(const std::string& clientId) override {
        return true;
    }

    size_t getRateLimit(const std::string& clientId) const override {
        return 1000;
    }

    bool isRateLimited(const std::string& clientId) const override {
        return false;
    }

    // Event callback methods
    void setMessageEventCallback(MessageEventCallback callback) override {
        // Store callback for future use
    }

    void setRoutingEventCallback(RoutingEventCallback callback) override {
        // Store callback for future use
    }

    void setDeliveryEventCallback(DeliveryEventCallback callback) override {
        // Store callback for future use
    }

    void setSubscriptionEventCallback(SubscriptionEventCallback callback) override {
        // Store callback for future use
    }

    // Configuration methods
    void setMaxQueueSize(size_t maxSize) override {
        // Store configuration for future use
    }

    void setMessageTimeout(std::chrono::seconds timeout) override {
        // Store configuration for future use
    }

    void setRetryAttempts(int maxRetries) override {
        // Store configuration for future use
    }

    void setRetryDelay(std::chrono::milliseconds delay) override {
        // Store configuration for future use
    }

    // Protocol management methods
    bool registerProtocol(core::CommunicationProtocol protocol,
                        std::shared_ptr<core::IServerInterface> server) override {
        return true;
    }

    bool unregisterProtocol(core::CommunicationProtocol protocol) override {
        return true;
    }

    std::vector<core::CommunicationProtocol> getRegisteredProtocols() const override {
        return {core::CommunicationProtocol::HTTP, core::CommunicationProtocol::WEBSOCKET, core::CommunicationProtocol::GRPC};
    }

    bool isProtocolRegistered(core::CommunicationProtocol protocol) const override {
        return true;
    }



    MessageStatistics getProtocolStatistics(core::CommunicationProtocol protocol) const override {
        // Implementation would return protocol-specific statistics
        MessageStatistics protocolStats;
        return protocolStats;
    }

    void resetStatistics() override {
        statistics_ = MessageStatistics{};
    }

    std::unordered_map<std::string, size_t> getTopicStatistics() const override {
        std::lock_guard<std::mutex> lock(subscriptionsMutex_);
        
        std::unordered_map<std::string, size_t> topicCounts;
        for (const auto& pair : subscriptions_) {
            const auto& subscription = pair.second;
            topicCounts[subscription.topic]++;
        }
        
        return topicCounts;
    }

    std::unordered_map<std::string, size_t> getClientStatistics() const override {
        std::lock_guard<std::mutex> lock(subscriptionsMutex_);
        
        std::unordered_map<std::string, size_t> clientCounts;
        for (const auto& pair : subscriptions_) {
            const auto& subscription = pair.second;
            clientCounts[subscription.clientId]++;
        }
        
        return clientCounts;
    }

private:
    mutable std::mutex messagesMutex_;
    mutable std::mutex subscriptionsMutex_;
    mutable std::mutex receiptsMutex_;
    mutable std::mutex routesMutex_;
    
    std::unordered_map<std::string, Message> messages_;
    std::unordered_map<std::string, TopicSubscription> subscriptions_;
    std::unordered_map<std::string, DeliveryReceipt> deliveryReceipts_;
    std::unordered_map<std::string, MessageRoute> routes_;
    
    MessageStatistics statistics_;
    
    std::atomic<bool> running_{false};
    std::thread messageProcessingThread_;
    
    std::string description_;

    std::string generateMessageId() const {
        static std::random_device rd;
        static std::mt19937 gen(rd());
        static std::uniform_int_distribution<> dis(0, 15);
        
        std::stringstream ss;
        ss << "msg_";
        for (int i = 0; i < 16; ++i) {
            ss << std::hex << dis(gen);
        }
        return ss.str();
    }

    void messageProcessingLoop() {
        while (running_) {
            processMessages();
            std::this_thread::sleep_for(std::chrono::milliseconds(100));
        }
    }

    void processMessages() {
        std::lock_guard<std::mutex> lock(messagesMutex_);
        
        for (auto& pair : messages_) {
            auto& message = pair.second;
            if (message.status == MessageStatus::PENDING) {
                // Simulate message processing
                message.status = MessageStatus::SENT;
                message.sentAt = std::chrono::system_clock::now();
            }
        }
    }
};

// Factory function implementation
std::unique_ptr<core::IService> CommunicationServiceFactory::createService(
    const std::string& serviceName,
    const std::unordered_map<std::string, std::string>& config) {
    // TODO: Fix abstract class issue before enabling instantiation
    // if (serviceName == "communication") {
    //     return std::make_unique<CommunicationServiceImpl>();
    // }
    return nullptr;
}

std::vector<std::string> CommunicationServiceFactory::getSupportedServices() const {
    return {"communication"};
}

bool CommunicationServiceFactory::isServiceSupported(const std::string& serviceName) const {
    return serviceName == "communication";
}

} // namespace services
} // namespace server
} // namespace astrocomm
